[workspace]
resolver = "2"
members = [
    "tosho",
    "tosho_musq",
    "tosho_kmkc",
    "tosho_amap",
    "tosho_sjv",
    "tosho_rbean",
    "tosho_mplus",
    "tosho_macros",
    "tosho_common",
]

[workspace.package]
version = "0.8.0-dev"
edition = "2024"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
repository = "https://github.com/noaione/tosho-mango"
homepage = "https://tosho.dev"
rust-version = "1.85.0"

[workspace.dependencies]
# Tokio related
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"

# JSON/Protobuf related
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
prost = "0.13.4"

# Utilities
anyhow = "1"
base64 = "0.22.1"
sha2 = "0.10.9"
chrono = { version = "0.4.41", default-features = false, features = ["clock", "std"] }
rand = "0.9.1"

# HTTP related
reqwest = { version = "0.12.18", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "socks", "stream"] }
reqwest_cookie_store = "0.8.0"

# Image
image = { version = "0.25.6", default-features = false, features = ["jpeg", "png"] }
kamadak-exif = "0.6.1"

# AES related
aes = "0.8.4"
cbc = "0.1.2"

# CI build profile, very optimized
[profile.ci]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
