[workspace]
resolver = "2"
members = [
    "tosho",
    "tosho_musq",
    "tosho_kmkc",
    "tosho_amap",
    "tosho_sjv",
    "tosho_rbean",
    "tosho_mplus",
    "tosho_nids",
    "tosho_macros",
    "tosho_common",
]

[workspace.package]
version = "0.9.0"
edition = "2024"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
repository = "https://github.com/noaione/tosho-mango"
homepage = "https://github.com/noaione/tosho-mango"
rust-version = "1.88.0"

[workspace.dependencies]
# Tokio related
tokio = { version = "1.48.0", features = ["full"] }
futures-util = "0.3.31"

# JSON/Protobuf related
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
prost = "0.14.1"

# Utilities
anyhow = "1"
base64 = "0.22.1"
sha2 = "0.10.9"
time = "0.3.44"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
rand = "0.9.2"
md-5 = "0.10.6"
uuid = { version = "1.19.0", features = ["v4", "fast-rng"] }
num-format = "0.4.4"
regex = "1.12.2"
aho-corasick = "1.1.4"
secular = "1.0.1"

# HTTP related
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "charset", "http2", "macos-system-configuration", "socks", "stream"] }
reqwest_cookie_store = "0.9.0"
urlencoding = "2.1.3"

# Image
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png"] }
kamadak-exif = "0.6.1"

# Filesystem related
mime_guess = "2.0.5"
glob = "0.3.3"
directories = "6.0.0"

# AES related
aes = "0.8.4"
cbc = "0.1.2"

# CLI related
clap = { version = "4.5.53", features = ["derive"] }
anstream = "0.6.21"
color-print = "0.3.7"
inquire = "0.9.1"
indicatif = "0.18.3"
supports-hyperlinks = "3.2.0"
self_update = { version = "0.42.0", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Windows deps
windows-sys = { version = "0.61.2", default-features = false, features = ["Win32_Foundation", "Win32_System_Console"] }

# CI build profile, very optimized
[profile.ci]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
