[package]
name = "tosho"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["cli", "downloader"]
description = "A downloader for some official mango website"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Sources deps
tosho-common = { path = "../tosho_common", version = "=0.1.0", features = ["all"] }
tosho-musq = { path = "../tosho_musq", version = "=0.6.0" }
tosho-kmkc = { path = "../tosho_kmkc", version = "=0.6.0" }
tosho-amap = { path = "../tosho_amap", version = "=0.6.0" }
tosho-sjv = { path = "../tosho_sjv", version = "=0.6.0" }
tosho-rbean = { path = "../tosho_rbean", version = "=0.4.0" }
tosho-mplus = { path = "../tosho_mplus", version = "=0.3.0" }
tosho-macros = { path = "../tosho_macros", version = "0.3" }

# External deps
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
prost.workspace = true
anyhow.workspace = true
chrono.workspace = true
reqwest.workspace = true
futures-util.workspace = true
aho-corasick = "1.1.3"
secular = "1.0.1"

# CLI deps
clap = { version = "4.5.19", features = ["derive"] }
anstream = "0.6.15"
color-print = "0.3.6"
inquire = "0.7.5"
indicatif = "0.17.8"
directories = "5.0.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
glob = "0.3.1"
supports-hyperlinks = "3.0.0"
num-format = "0.4.4"
regex = "1.11.0"
mime_guess = "2.0.5"
paste = "1.0.15"

self_update = { version = "0.41.0", features = ["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"] }

# Windows deps
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_System_Console"] }

[build-dependencies]
winres = "0.1"
