[package]
name = "tosho"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["cli", "downloader"]
description = "A downloader for some official mango website"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["with-updater"]
with-updater = ["dep:self_update"]

[dependencies]
# Sources deps
tosho-common = { path = "../tosho_common", version = "=0.2.0", features = ["all"] }
tosho-musq = { path = "../tosho_musq", version = "=0.8.0", features = ["aes-dec"] }
tosho-kmkc = { path = "../tosho_kmkc", version = "=0.8.0" }
tosho-amap = { path = "../tosho_amap", version = "=0.8.0" }
tosho-sjv = { path = "../tosho_sjv", version = "=0.8.0" }
tosho-rbean = { path = "../tosho_rbean", version = "=0.6.0" }
tosho-mplus = { path = "../tosho_mplus", version = "=0.5.0" }
tosho-nids = { path = "../tosho_nids", version = "=0.1.0" }
tosho-macros = { path = "../tosho_macros", version = "0.6" }

# External deps
tokio.workspace = true
futures-util.workspace = true

serde.workspace = true
serde_json.workspace = true
prost.workspace = true

anyhow.workspace = true
chrono.workspace = true
aho-corasick.workspace = true
secular.workspace = true
uuid.workspace = true
num-format.workspace = true
regex.workspace = true

reqwest.workspace = true

directories.workspace = true
mime_guess.workspace = true
glob.workspace = true

# CLI deps
clap.workspace = true
anstream.workspace = true
color-print.workspace = true
inquire.workspace = true
indicatif.workspace = true
supports-hyperlinks.workspace = true
self_update = { workspace = true, optional = true }

# Windows deps
[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true

[build-dependencies]
winres = "0.1"
