[package]
name = "tosho-amap"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of AM API by AP."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies", "json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
time.workspace = true
reqwest_cookie_store.workspace = true
sha2.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.3" }
tosho-common = { path = "../tosho_common", version = "0.1.0", features = ["serde", "id-gen"] }
