[package]
name = "tosho-dio"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of D.io API by J."
readme = "./README.md"

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies"] }
reqwest_cookie_store.workspace = true
futures-util.workspace = true
time.workspace = true
base64.workspace = true

tosho-common = { path = "../tosho_common", version = "=0.1.0" }
