[package]
name = "tosho-macros"
version = "0.2.0"
edition = "2021"
authors = ["noaione <noaione@n4o.xyz>"]
license = "MIT"
description = "A macro library for tosho-mango"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true