[package]
name = "tosho-macros"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A macro library for tosho-mango"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

base64.workspace = true

[dev-dependencies]
serde.workspace = true
prost.workspace = true

[lib]
proc-macro = true