[package]
name = "tosho-mplus"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of M+ API by S."
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures-util.workspace = true

serde.workspace = true
prost.workspace = true

reqwest.workspace = true

chrono.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.6" }
tosho-common = { path = "../tosho_common", version = "=0.3.0", features = ["protobuf"] }
