[package]
name = "tosho-musq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
prost.workspace = true
prost-types.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
reqwest = { workspace = true, features = ["stream"] }
chrono = "0.4"
futures-util = "0.3"

tosho-macros = { path = "../tosho_macros" }

[build-dependencies]
prost-build = "0.12"