[package]
name = "tosho-musq"
version = "0.5.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of MU! API by SQ."
readme = "./README.md"
# Do not include tests in crates.io package
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
serde.workspace = true
prost.workspace = true
base64.workspace = true
chrono.workspace = true
reqwest.workspace = true
futures-util.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.3" }
tosho-common = { path = "../tosho_common", version = "=0.1.0", features = ["protobuf"] }
