[package]
name = "tosho-musq"
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of MU! API by SQ."
readme = "./README.md"
# Do not include tests in crates.io package
exclude = [
    "tests/*",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio.workspace = true
futures-util.workspace = true

serde.workspace = true
prost.workspace = true

reqwest.workspace = true

chrono.workspace = true

aes = { workspace = true, optional = true }
cbc = { workspace = true, optional = true }

tosho-macros = { path = "../tosho_macros", version = "0.5" }
tosho-common = { path = "../tosho_common", version = "=0.2.0", features = ["protobuf"] }

[features]
default = []
aes-dec = ["dep:aes", "dep:cbc"]
