[package]
name = "tosho-rbean"
version = "0.6.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client for 小豆 (Red Bean)"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures-util.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest = { workspace = true, features = ["json"] }

chrono.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.6" }
tosho-common = { path = "../tosho_common", version = "=0.2.0", features = ["serde"] }
