[package]
name = "tosho-sjv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "An asynchronous client of SJ/M by V"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
reqwest = { workspace = true, features = ["cookies", "stream", "json"] }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
lazy_static.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
time.workspace = true
reqwest_cookie_store.workspace = true
image.workspace = true
kamadak-exif = "0.5.5"

tosho-macros = { path = "../tosho_macros" }
