[package]
name = "tosho-sjv"
version = "0.6.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords = ["api", "library"]
description = "An asynchronous client of SJ/M by V"
readme = "./README.md"
# Do not include tests in crates.io package
exclude = [
    "tests/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
futures-util.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest = { workspace = true, features = ["json"] }

base64.workspace = true
chrono.workspace = true

image.workspace = true
kamadak-exif.workspace = true

tosho-macros = { path = "../tosho_macros", version = "0.4" }
tosho-common = { path = "../tosho_common", version = "=0.1.1", features = ["serde", "image", "id-gen"] }
